Bug 272875 - [view-transitions] Image capture rectangle doesn't include positioned descendants
Summary: [view-transitions] Image capture rectangle doesn't include positioned descend...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Matt Woodrow
URL:
Keywords: InRadar
Depends on:
Blocks: css-view-transitions
  Show dependency treegraph
 
Reported: 2024-04-17 19:11 PDT by Matt Woodrow
Modified: 2024-04-18 16:43 PDT (History)
5 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Woodrow 2024-04-17 19:11:39 PDT
...
Comment 1 Radar WebKit Bug Importer 2024-04-17 19:11:48 PDT
<rdar://problem/126660740>
Comment 2 Matt Woodrow 2024-04-17 19:21:45 PDT
Pull request: https://github.com/WebKit/WebKit/pull/27429
Comment 3 EWS 2024-04-18 16:43:35 PDT
Committed 277714@main (554ffc8d5365): <https://commits.webkit.org/277714@main>

Reviewed commits have been landed. Closing PR #27429 and removing active labels.