[view-transitions] Image capture rectangle doesn't include positioned descendants. https://bugs.webkit.org/show_bug.cgi?id=272875 <rdar://126660740>

Reviewed by Tim Nguyen.

Consolidate three different callers of 'localBoundingBox' into a single helper
'captureOverflowRect', or read from the previous value on RenderViewTransitionCapture.

Switch to using 'calculateLayerBounds' instead of 'localBoundingBox', since this
also recurses through descendant layers.

Adds a new flag 'PreserveAncestorFlags' to ensure that 'UseLocalClipRectIfPossible'
isn't added when recursing through descendants (which incorrectly applies overflow
clipping to descendants that have a containing block outside).

If the captured element is the root element, use the snapshot containing block size
instead of the ink overflow rectangle.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::captureOverflowRect):
(WebCore::snapshotElementVisualOverflowClippedToViewport):
(WebCore::ViewTransition::captureOldState):
(WebCore::ViewTransition::updatePseudoElementStyles):
(WebCore::snapshotNodeVisualOverflowClippedToViewport): Deleted.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):
* Source/WebCore/rendering/RenderViewTransitionCapture.h:

Canonical link: https://commits.webkit.org/277714@main